<resources>
    <string name="app_name">ShoppingLists</string>
    <string name="action_settings">Settings</string>

    <string name="shopping_lists">Shopping Lists</string>
    <string name="archived_shopping_lists">Archived Shopping Lists</string>
    <string name="floating_action_button">floating action button</string>
    <string name="add_a_shopping_list">Add a shopping list</string>
    <string name="edit_a_shopping_list">Edit a shopping list</string>
    <string name="add_a_shopping_item">Add a shopping item</string>
    <string name="title">Title</string>
    <string name="title_required">Title is required.</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_required">Quantity is required.</string>
    <string name="x_quantity">X%1$d</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="error">An error occurred, please try again later.</string>
    <string name="confirm">Confirm</string>
    <string name="no_shopping_list">You have not added any shopping list</string>
    <string name="no_shopping_items">You have not added any items</string>
    <string name="no_archived_shopping_list">You do not have any archived shopping lists</string>
    <string name="groceries_done">Groceries done %1$d/%2$d</string>
</resources>