<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextMontserratMedium.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/default_margin"
        android:text="@string/add_a_shopping_list"
        android:textColor="@color/light_green" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_title"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:padding="@dimen/default_margin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_description"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:padding="@dimen/default_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/MaterialButton.Border"
            android:layout_marginEnd="@dimen/default_margin_xs"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create"
            style="@style/MaterialButton.NoBorder"
            android:layout_marginStart="@dimen/default_margin_xs"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/create"/>

    </LinearLayout>

</LinearLayout>